syntax = "proto3";

package order;

option java_multiple_files = true;
option java_package = "com.ddm.demo.proto.order";
option java_outer_classname = "OrderProto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc GetUserOrders(GetUserOrdersRequest) returns (stream GetUserOrdersResponse);
}

message CreateOrderRequest {
  string user_id = 1;
  string product_name = 2;
  double amount = 3;
  int32 quantity = 4;
}

message CreateOrderResponse {
  string order_id = 1;
  bool success = 2;
  string message = 3;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  string order_id = 1;
  string user_id = 2;
  string product_name = 3;
  double amount = 4;
  int32 quantity = 5;
  string status = 6;
  int64 created_at = 7;
}

message GetUserOrdersRequest {
  string user_id = 1;
}

message GetUserOrdersResponse {
  string order_id = 1;
  string product_name = 2;
  double amount = 3;
  int32 quantity = 4;
  string status = 5;
  int64 created_at = 6;
}
